# core

./: .clang-format  .gitignore  CMakeLists.txt  ezi.win.manifest  ezi.win.rc
extensions/inc/: terminal.hpp  tray.hpp  windowm.hpp
extensions/src/: terminal.cpp  tray.cpp  windowm.cpp
inc/: application.hpp  bridge.hpp  dialog.hpp  entry.hpp  extensions.hpp  ezienv.hpp  json.hpp  platform.hpp  print.hpp  resource.hpp  utils.hpp  webview.hpp  window.hpp
src/: application.cpp  bridge.cpp  dialog.cpp  ezienv.cpp  main.cpp  resource.cpp  utils.cpp  webview.cpp  window.cpp
